Simplified relationship between Doctor and Patient: now ALL doctors can search and see ALL patients and their data. Patients have no access to Doctor data. Problem with Doctor class continues: unable to identify database table???

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=CalibrateYourHealth
 #MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/calibrateyourhealth
+spring.datasource.url=jdbc:mysql://localhost:3306/CalibrateYourHealth
 spring.datasource.username=jonathan
 spring.datasource.password=jojo65
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
